# fastodoo

./: README.md  crud.py  database.py  dynamic.py  main.py  middleware.py  models.py  pyproject.toml  schemas.py
docker/: Dockerfile  fastodoo.Dockerfile
fastodoo/: crud.py  database.py  dynamic.py  middleware.py  models.py  schemas.py
